--- a/E/Epic/Vail_Resort_Template/ads/320x50/Breckenridge/320x50_Breckenridge.htm
+++ b/E/Epic/Vail_Resort_Template/ads/320x50/Breckenridge/320x50_Breckenridge.htm
@@ -22,8 +22,8 @@
     </style>
     <style media="screen" data-dynamic="style">
       #ad {
-        width: 300px;
-        height: 250px;
+        width: 320px;
+        height: 50px;
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
@@ -46,83 +46,84 @@
       <div id="backgroundImage1" class="asset frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" class="asset frame multiframe" data-image="backgroundImage2"></div>
       <div id="backgroundImage3" class="asset frame multiframe" data-image="backgroundImage3"></div>
-      <div id="topWhitePatch" class="frame" style="top:-213px;background-color:rgba(0, 76, 128, 0.85);"></div>
-      <div id="bottomWhitePatch" class="frame" style="top:165px;background-color:rgba(0, 76, 128, 0.9);"></div>
+      <div id="topWhitePatch" class="frame" style="left:-292px;background-color:rgba(0, 76, 128, 0.85);"></div>
+      <div id="bottomWhitePatch" class="frame" style="left:160px;background-color:rgba(0, 76, 128, 0.9);"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="saleImage" class="asset frame" data-image="saleImage" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
       <div id="frameText1" class="text-left PoppinsSemibold"
         data-text="frameText1"
-        style="top: 171px;
-          left: 11px;
-          width: 180px;
-          height: 70px;
-          font-size: 17px;
-          letter-spacing: 1.7px;
-          line-height: 1.15;">
+        style="top: 3px;
+          left: 170px;
+          width: 82px;
+          height: 44px;
+          font-size: 11px;
+          letter-spacing: 1.1px;
+          line-height: 1.1;">
       </div>
       <div id="frameText2" class="text-left PoppinsSemibold"
         data-text="frameText2"
-        style="top: 171px;
-          left: 11px;
-          width: 180px;
-          height: 70px;
-          font-size: 17px;
-          letter-spacing: 1.7px;
-          line-height: 1.15;">
+        style="top: 3px;
+          left: 170px;
+          width: 82px;
+          height: 44px;
+          font-size: 11px;
+          letter-spacing: 1.1px;
+          line-height: 1.1;">
       </div>
       <div id="frameText3" class="text-left PoppinsSemibold"
         data-text="frameText3"
-        style="top: 171px;
-          left: 11px;
-          width: 180px;
-          height: 70px;
-          font-size: 17px;
-          letter-spacing: 1.7px;
-          line-height: 1.15;">
+        style="top: 3px;
+          left: 170px;
+          width: 82px;
+          height: 44px;
+          font-size: 11px;
+          letter-spacing: 1.1px;
+          line-height: 1.1;">
       </div>
       <div id="cta" class="text PoppinsBold"
         data-text="ctaText"
-        data-style="padding:0 8px 1px;"
-        style="top: 194px;
-          left: 201px;
-          width: 87px;
-          height: 28px;
-          font-size: 11px;
-          line-height: 20px;
-          letter-spacing: 1px;
-          border-radius: 15px;
+        data-style="padding:0 5px 0px;"
+        style="top: 17px;
+          left: 256px;
+          width: 55px;
+          height: 18px;
+          font-size: 8px;
+          line-height: 10px;
+          letter-spacing: 0.5px;
+          border-radius: 12px;
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
       <div class="PoppinsSemibold">PoppinsSemibold</div>
+      <!-- <div class="TradeGothicNextLTProBoldCondensed">TradeGothicNextLTProBoldCondensed</div> -->
       <div class="PoppinsBold">PoppinsBold</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
       var ad = new Ad({
         root: document.querySelector('#ad'),
-        width: 300,
-        height: 250,
+        width: 320,
+        height: 50,
         borderWidth: 1,
         borderColor: '#999'
       });
       setTimeout(function() {
         ad.contentSetup({
           cam: {
-            brandName: 'Okemo',
             layout: 'singleImage', //singleImage|multipleImages
-            backgroundImage1: 'assets/300x250_Vail_Resort_BackgroundImage1.png',
-            backgroundImage2: 'assets/300x250_Vail_Resort_BackgroundImage2.png',
-            backgroundImage3: 'assets/300x250_Vail_Resort_BackgroundImage3.png',
-            logoImage: 'assets/300x250_Vail_Resort_LogoImage.png',
+            backgroundImage1: 'assets/320x50_Vail_Resort_BackgroundImage1.png',
+            backgroundImage2: 'assets/320x50_Vail_Resort_BackgroundImage2.png',
+            backgroundImage3: 'assets/320x50_Vail_Resort_BackgroundImage3.png',
+            backgroundImage4: 'assets/320x50_Vail_Resort_BackgroundImage4.png',
+            logoImage: 'assets/320x50_Vail_Resort_LogoImage.png',
             frameText1: 'Return to the mountain you love',
             frameText2: 'Ski & ride from 1 day to every day',
             frameText3: 'Get Your Pass By 9/7',
             ctaText: "Buy Now",
-            clickURL: "https://www.okemo.com/",
+            clickURL: "https://www.vail.com/",
           },
           feed: [
             {
@@ -131,7 +132,7 @@
           ],
           staticData: {
             // ref: 'ref.png'
-            saleImage: 'images/300x250_Vail_Resort_SaleImage.png',
+            saleImage: 'images/320x50_Vail_Resort_SaleImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
             ctaBtnColor: '#d71920^#960c11',
           },
@@ -141,12 +142,15 @@
               content.ctaBtnHover = content.ctaBtnColor.split('^')[1];
               layout = content.layout.toLowerCase();
               if(layout == 'multipleimages') {
-                content.styleProperties = "{'#cta': {x:-191, y:21}, '#saleImage': {css:{display:'block'}}}";
+                content.styleProperties = "{'#frameText': {x:-4, y:-3}, '#frameText span': {css:{textAlign:'left'}}, '#cta': {x:-90, y:13}, '#saleImage': {css:{display:'block'}}}";
                 var frameText = document.querySelectorAll("#frameText1,#frameText2,#frameText3");
                 for (var i = 0; i < frameText.length; i++){
-                  frameText[i].style.width = '200px';
-                  frameText[i].style.height = '38px';
+                 frameText[i].style.width = '95px';
+                 frameText[i].style.height = '22px';
                 }
+                ad.root.querySelector('#cta').style.width = '49px';
+                ad.root.querySelector('#cta').style.height = '16px';
+                ad.root.querySelector('#cta').style.fontSize = '5.7px';
               }
             });
             return data;
@@ -166,10 +170,10 @@
               }
             } catch(e) {  }
           }
-          var adWidth = 300,adHeight = 250;
+          var adWidth = 320,adHeight = 50;
           if(layout != 'multipleimages') { gsap.set('.multiframe', { autoAlpha :0}) }
             gsap.timeline({defaults:{ease: Power2.easeInOut, duration: 0.7}})
-            .from('#bottomWhitePatch', { y:adHeight, delay:0.5 })
+            .from('#bottomWhitePatch', { x:adWidth/2, delay:0.5 })
             .from('#frameText1, #cta, #saleImage', { autoAlpha:0 })
             .to('#frameText1', { autoAlpha:0, delay:3 })
             .from('#frameText2, #backgroundImage2', { autoAlpha:0 })
