--- a/E/Epic/Vail_Resort_Template/ads/970x250/Breckenridge/970x250_Breckenridge.htm
+++ b/E/Epic/Vail_Resort_Template/ads/970x250/Breckenridge/970x250_Breckenridge.htm
@@ -22,7 +22,7 @@
     </style>
     <style media="screen" data-dynamic="style">
       #ad {
-        width: 300px;
+        width: 970px;
         height: 250px;
         font-family: arial,sans-serif;
         font-weight: 900;
@@ -46,65 +46,66 @@
       <div id="backgroundImage1" class="asset frame" data-image="backgroundImage1"></div>
       <div id="backgroundImage2" class="asset frame multiframe" data-image="backgroundImage2"></div>
       <div id="backgroundImage3" class="asset frame multiframe" data-image="backgroundImage3"></div>
-      <div id="topWhitePatch" class="frame" style="top:-213px;background-color:rgba(0, 76, 128, 0.85);"></div>
-      <div id="bottomWhitePatch" class="frame" style="top:165px;background-color:rgba(0, 76, 128, 0.9);"></div>
+      <div id="topWhitePatch" class="frame" style="top:-1198px;left:-636px;background-color:rgba(0, 76, 128, 0.85);"></div>
+      <div id="bottomWhitePatch" class="frame" style="left:596px;background-color:rgba(0, 76, 128, 0.9);"></div>
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="saleImage" class="asset frame" data-image="saleImage" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
       <div id="frameText1" class="text-left PoppinsSemibold"
         data-text="frameText1"
-        style="top: 171px;
-          left: 11px;
-          width: 180px;
-          height: 70px;
-          font-size: 17px;
-          letter-spacing: 1.7px;
-          line-height: 1.15;">
+        style="top: 50px;
+          left: 623px;
+          width: 320px;
+          height: 130px;
+          font-size: 30px;
+          letter-spacing: 2.65px;
+          line-height: 1.13;">
       </div>
       <div id="frameText2" class="text-left PoppinsSemibold"
         data-text="frameText2"
-        style="top: 171px;
-          left: 11px;
-          width: 180px;
-          height: 70px;
-          font-size: 17px;
-          letter-spacing: 1.7px;
-          line-height: 1.15;">
+        style="top: 50px;
+          left: 623px;
+          width: 320px;
+          height: 130px;
+          font-size: 30px;
+          letter-spacing: 2.65px;
+          line-height: 1.13;">
       </div>
       <div id="frameText3" class="text-left PoppinsSemibold"
         data-text="frameText3"
-        style="top: 171px;
-          left: 11px;
-          width: 180px;
-          height: 70px;
-          font-size: 17px;
-          letter-spacing: 1.7px;
-          line-height: 1.15;">
+        style="top: 50px;
+          left: 623px;
+          width: 320px;
+          height: 130px;
+          font-size: 30px;
+          letter-spacing: 2.65px;
+          line-height: 1.13;">
       </div>
       <div id="cta" class="text PoppinsBold"
         data-text="ctaText"
-        data-style="padding:0 8px 1px;"
-        style="top: 194px;
-          left: 201px;
-          width: 87px;
-          height: 28px;
-          font-size: 11px;
-          line-height: 20px;
-          letter-spacing: 1px;
-          border-radius: 15px;
+        data-style="padding:0 8px 0px;"
+        style="top: 193px;
+          left: 623px;
+          width: 156px;
+          height: 40px;
+          font-size: 16px;
+          line-height: 22px;
+          letter-spacing: 3.2px;
+          /*border-radius: 20px;*/
           color: #fff;">
       </div>
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
       <div class="PoppinsSemibold">PoppinsSemibold</div>
+      <!-- <div class="TradeGothicNextLTProBoldCondensed">TradeGothicNextLTProBoldCondensed</div> -->
       <div class="PoppinsBold">PoppinsBold</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
       var ad = new Ad({
         root: document.querySelector('#ad'),
-        width: 300,
+        width: 970,
         height: 250,
         borderWidth: 1,
         borderColor: '#999'
@@ -112,17 +113,17 @@
       setTimeout(function() {
         ad.contentSetup({
           cam: {
-            brandName: 'Okemo',
             layout: 'singleImage', //singleImage|multipleImages
-            backgroundImage1: 'assets/300x250_Vail_Resort_BackgroundImage1.png',
-            backgroundImage2: 'assets/300x250_Vail_Resort_BackgroundImage2.png',
-            backgroundImage3: 'assets/300x250_Vail_Resort_BackgroundImage3.png',
-            logoImage: 'assets/300x250_Vail_Resort_LogoImage.png',
+            backgroundImage1: 'assets/970x250_Vail_Resort_BackgroundImage1.png',
+            backgroundImage2: 'assets/970x250_Vail_Resort_BackgroundImage2.png',
+            backgroundImage3: 'assets/970x250_Vail_Resort_BackgroundImage3.png',
+            backgroundImage4: 'assets/970x250_Vail_Resort_BackgroundImage4.png',
+            logoImage: 'assets/970x250_Vail_Resort_LogoImage.png',
             frameText1: 'Return to the mountain you love',
             frameText2: 'Ski & ride from 1 day to every day',
             frameText3: 'Get Your Pass By 9/7',
             ctaText: "Buy Now",
-            clickURL: "https://www.okemo.com/",
+            clickURL: "https://www.vail.com/",
           },
           feed: [
             {
@@ -131,7 +132,7 @@
           ],
           staticData: {
             // ref: 'ref.png'
-            saleImage: 'images/300x250_Vail_Resort_SaleImage.png',
+            saleImage: 'images/970x250_Vail_Resort_SaleImage.png',
             styleProperties: "na", //{'#cta': {y:10},'#logoImage': {y:10}}
             ctaBtnColor: '#d71920^#960c11',
           },
@@ -141,11 +142,10 @@
               content.ctaBtnHover = content.ctaBtnColor.split('^')[1];
               layout = content.layout.toLowerCase();
               if(layout == 'multipleimages') {
-                content.styleProperties = "{'#cta': {x:-191, y:21}, '#saleImage': {css:{display:'block'}}}";
+                content.styleProperties = "{'#saleImage': {css:{display:'block'}}}";
                 var frameText = document.querySelectorAll("#frameText1,#frameText2,#frameText3");
                 for (var i = 0; i < frameText.length; i++){
-                  frameText[i].style.width = '200px';
-                  frameText[i].style.height = '38px';
+                 frameText[i].style.width = '220px';
                 }
               }
             });
@@ -166,11 +166,11 @@
               }
             } catch(e) {  }
           }
-          var adWidth = 300,adHeight = 250;
+          var adWidth = 970,adHeight = 250;
           if(layout != 'multipleimages') { gsap.set('.multiframe', { autoAlpha :0}) }
             gsap.timeline({defaults:{ease: Power2.easeInOut, duration: 0.7}})
-            .from('#bottomWhitePatch', { y:adHeight, delay:0.5 })
-            .from('#frameText1, #cta, #saleImage', { autoAlpha:0 })
+            .from('#bottomWhitePatch', { x:adWidth/2, delay:0.5 })
+            .from('#frameText1, #cta, #logoImage, #saleImage', { autoAlpha:0 })
             .to('#frameText1', { autoAlpha:0, delay:3 })
             .from('#frameText2, #backgroundImage2', { autoAlpha:0 })
             .to('#frameText2', { autoAlpha:0, delay:3 })
